tests/rosetta/out/C/csv-to-html-translation-1.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:04Z
// Generated by Mochi compiler v0.10.26 on 2025-07-16T12:36:04Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int main() {
  char *tmp1 =
      concat_string("Character,Speech\n",
                    "The multitude,The messiah! Show us the messiah!\n");
  char *tmp2 = concat_string(
      tmp1, "Brians mother,<angry>Now you listen here! He's not the messiah; "
            "he's a very naughty boy! Now go away!</angry>\n");
  char *tmp3 = concat_string(tmp2, "The multitude,Who are you?\n");
  char *tmp4 =
      concat_string(tmp3, "Brians mother,I'm his mother; that's who!\n");
  char *tmp5 = concat_string(
      tmp4, "The multitude,Behold his mother! Behold his mother!");
  const char *c = tmp5;
  list_int tmp6 = list_int_create(0);
  list_int rows = tmp6;
  for (int tmp7 = 0; tmp7 < split(c, "\n").len; tmp7++) {
    char *line = split(c, "\n").data[tmp7];
    rows = 0;
  }
  printf("<table>\n");
  for (int tmp8 = 0; tmp8 < rows.len; tmp8++) {
    int row = rows.data[tmp8];
    const char *cells = "";
    for (int tmp9 = 0; tmp9 < row.len; tmp9++) {
      char *cell = row.data[tmp9];
      char *tmp10 = concat_string(cells, "<td>");
      char *tmp11 = concat_string(tmp10, cell);
      char *tmp12 = concat_string(tmp11, "</td>");
      cells = tmp12;
    }
    char *tmp13 = concat_string("    <tr>", cells);
    char *tmp14 = concat_string(tmp13, "</tr>");
    printf("%s\n", tmp14);
  }
  printf("</table>\n");
  return 0;
}
